[gd_scene load_steps=14 format=3 uid="uid://ck46epavjai3"]

[ext_resource type="Script" path="res://scenes/prolog/prolog.gd" id="1_3y4gn"]
[ext_resource type="PackedScene" uid="uid://bwq0q75c6c60w" path="res://scenes/prolog/panels/panel_1/panel_1.tscn" id="2_0glj1"]
[ext_resource type="Texture2D" uid="uid://dqbxmj6d7pr2" path="res://assets/spr_icons_16x16.png" id="2_gguwk"]
[ext_resource type="PackedScene" uid="uid://dqrsll13v7vqp" path="res://scenes/prolog/panels/panel_2/panel_2.tscn" id="3_g8wkp"]
[ext_resource type="PackedScene" uid="uid://dmvx80l04war2" path="res://scenes/prolog/panels/panel_3/panel_3.tscn" id="4_jgd2q"]
[ext_resource type="PackedScene" uid="uid://ifb2pwb5gp2k" path="res://scenes/prolog/panels/panel_4/panel_4.tscn" id="5_smlac"]
[ext_resource type="PackedScene" uid="uid://bkkvx4ixwm64x" path="res://scenes/prolog/panels/panel_5_6/panel_5_6.tscn" id="6_kqivy"]
[ext_resource type="AudioStream" uid="uid://738fidry78b6" path="res://assets/sounds/misc/fire.wav" id="28_hduhr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57le1"]
bg_color = Color(0.188235, 0.129412, 0.176471, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ttkq"]
atlas = ExtResource("2_gguwk")
region = Rect2(16, 0, 16, 16)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6p4gn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_gcvl0"]
atlas = ExtResource("2_gguwk")
region = Rect2(0, 0, 16, 16)

[sub_resource type="ViewportTexture" id="ViewportTexture_tqnm7"]

[node name="Intro" type="Node2D"]
script = ExtResource("1_3y4gn")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_57le1")

[node name="PanelsContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
layout_mode = 0
offset_right = 426.0
offset_bottom = 240.0

[node name="Panel4" parent="CanvasLayer/Panel/PanelsContainer" instance=ExtResource("5_smlac")]
unique_name_in_owner = true
visible = false

[node name="Panel3" parent="CanvasLayer/Panel/PanelsContainer" instance=ExtResource("4_jgd2q")]
unique_name_in_owner = true
visible = false

[node name="Panel2" parent="CanvasLayer/Panel/PanelsContainer" instance=ExtResource("3_g8wkp")]
unique_name_in_owner = true
visible = false

[node name="Panel1" parent="CanvasLayer/Panel/PanelsContainer" instance=ExtResource("2_0glj1")]
unique_name_in_owner = true
visible = false

[node name="Panel56" parent="CanvasLayer/Panel/PanelsContainer" instance=ExtResource("6_kqivy")]
unique_name_in_owner = true
visible = false

[node name="ButtonPromtsContainer" type="MarginContainer" parent="CanvasLayer/Panel"]
z_index = 2
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -240.0
offset_top = -17.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/separation = 2

[node name="SkipProgressBar" type="ProgressBar" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(34, 18)
layout_mode = 2
size_flags_vertical = 1
show_percentage = false

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/SkipProgressBar"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/SkipProgressBar/HBoxContainer"]
texture = SubResource("AtlasTexture_7ttkq")
centered = false
offset = Vector2(0, -2)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/SkipProgressBar/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10

[node name="SkipLabel" type="Label" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/SkipProgressBar/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.188235, 0.129412, 0.176471, 1)
theme_override_font_sizes/font_size = 8
text = "Skip"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_6p4gn")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
theme_override_constants/separation = 2
alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/PanelContainer/HBoxContainer"]
texture = SubResource("AtlasTexture_gcvl0")
centered = false
offset = Vector2(0, 1)

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
size_flags_horizontal = 10

[node name="NextLabel" type="Label" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer/PanelContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 6
theme_override_font_sizes/font_size = 8
text = "Next
"
horizontal_alignment = 1

[node name="Skip" type="Button" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(46, 0)
layout_mode = 2
text = "SKIP"
icon = SubResource("ViewportTexture_tqnm7")
flat = true

[node name="Next" type="Button" parent="CanvasLayer/Panel/ButtonPromtsContainer/HBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
text = "NEXT"
flat = true

[node name="FireSoundPlayer" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("28_hduhr")
volume_db = 5.0
bus = &"Sound"
